changed stle.css - fixed padding, margins, alignment for media queries

--- a/style.css
+++ b/style.css
@@ -199,44 +199,15 @@ i { padding-right: 10px; font-size: 1.5rem; }
 }
 /* PORTFOLIO FILTER BUTTON STYlING */
 
-/*.filter-btn, .about-btn {
-  margin: 0;
-  padding: 12px 16px;
-  height: 2em;
-  font-family: inherit;
-  font-size: 1em;
-  letter-spacing: 1px;
-  font-weight: 400;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  background-color: rgba(120, 73, 112, 0.7); /*#784970  */ 
-  /*text-decoration: none;
-  overflow: hidden;
-}*/
 .filter-btn:nth-child(1) { border-radius: .5em 0 0 .5em; }
 .filter-btn:nth-child(4) { border-radius: 0 .5em .5em 0; }
 .filter-btn:hover, .filter-btn:focus { outline: none; }
-/*.filter-btn span, .about-btn span {
-  position: relative;
-  display: inline-block;
-  -webkit-transition: -webkit-transform 0.3s;
-  -moz-transition: -moz-transform 0.3s;
-  transition: transform 0.3s;
-}*/
+
 .about-btn span::before {
   /*center icon as position is absolute*/
   left: calc((100% - 1em)/2);
 }
-/*.filter-btn span::before, .about-btn span::before {
-  position: absolute;
-  top: 100%;
-  font-weight: 700;
-  text-shadow: 0 0 1px rgba(255,255,255,0.3);
-  -webkit-transform: translate3d(0,100%,0);
-  -moz-transform: translate3d(0,100%,0);
-  transform: translate3d(0,100%,0);
-}*/
+
 .filter-btn span::before, .four0four-btn span::before { content: attr(data-hover); }
 .icon::before {
   display: inline-block;
@@ -267,7 +238,6 @@ i { padding-right: 10px; font-size: 1.5rem; }
   background-color: rgba(120, 73, 112, 0.6); /*#784970  */ 
   /*color: #f1f1f1;*/
 }
-
 
 .message {
   flex-direction: column;
@@ -577,7 +547,7 @@ footer a:hover, footer a:active, footer a:focus {  text-shadow: 1px 1px 1px rgba
   .contact li { padding: 0; }
   header { font-size: 1em; padding-top: 5px; }
   .padLeft { padding-left: 0; }
-  section, footer {
+  footer {
     -webkit-flex-direction: column;
     flex-direction: column;
     justify-content: flex-start;
